--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(#ffa557,#ffffff);
+  background: linear-gradient(#fa8b3c, #ffaa54);
 }
 canvas {
   display: block;
