--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 50;
   padding: 0;
   background: #fd895a;
+  font-family: "Times New Roman", Times, serif;
 }
 canvas {
   display: block;
