--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   background: #fd895a;
   font-family: "Times New Roman", Times, serif;
+  color: white;
 }
 canvas {
   display: block;
