--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2{
   color: white;
 }
 #cover{
-  margin-left: 10000;
+  margin-left: 10000px;
   border-style: double; 
   border-width: 5;
   border-color: white;
