--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ h2{
   color: white;
 }
 #cover{
-  position: absolute;
-  margin-left: 1000px;
+  float: right;
+  margin-right: 10px;
   border-style: double; 
   border-width: 5;
   border-color: white;
