--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ h2{
   color: white;
 }
 .cover{
-  float: right;
-  margin-right: 10px;
+  margin-left: 20px;
   border-style: double; 
   border-width: 5;
   border-color: white;
