--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ h2{
   border-style: solid; 
   border-width: 4;
   border-color: white;
-  background-color: white;
+  background-color: rgb(0,0,0,220);
+  
   float: right;
   width: 50%;
   margin-right: 75px;
+  margin-top: -100;
 }
