--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ h2{
   border-style: double; 
   border-width: 5;
   border-color: white;
-  width: 400;
-  padding: 5;
+  
+  float: left;
+  width: 50%;
 }
 .summary{
   border-style: solid; 
