--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  margin: 50;
+  margin: 0;
   padding: 0;
   background: #fd895a;
   font-family: "Times New Roman", Times, serif;
@@ -19,6 +19,9 @@ h2{
   border-style: double; 
   border-width: 5;
   border-color: white;
+  
+  float: left;
+  width: 400;
 }
 .summary{
   border-style: solid; 
@@ -27,7 +30,7 @@ h2{
   background-color: rgb(0,0,0,220);
   
   float: right;
-  width: 75%;
+  width: 50%;
   margin-right: 75px;
   margin-top: -100;
 }
