--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ canvas {
   display: block;
 }
 h1{
- color: rgb(145, 31, 0); 
+ color: white; 
 }
 h2{
   color: rgb(89, 14, 1);
@@ -33,4 +33,8 @@ h2{
   width: 50%;
   margin-right: 25px;
   margin-top: -100;
+}
+#bigImage{
+  width= 1000;
+  margin-left = 5;
 }
