--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  margin: 10;
+  margin: 0;
   padding: 0;
   background: #fd895a;
   font-family: "Times New Roman", Times, serif;
@@ -27,10 +27,10 @@ h2{
   border-style: solid; 
   border-width: 4;
   border-color: white;
-  background-color: rgb(255,255,255,220);
+  background-color: white;
   
   float: right;
-  width: 50%;
+  width: 60%;
   margin-right: 25px;
   margin-top: -100;
 }
