--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2{
   border-style: solid; 
   border-width: 4;
   border-color: white;
-  background-color: white;
+  background-color: #ffefe8;
   
   float: right;
   width: 60%;
